Filter out "snomed" in system instead of "*Missing*" in code for LH FHIR condition code data. (#1234)
* Filter out "Missing" code for condition data from Lighthouse FHIR. See MCP-2440.

* Filter out code with "system": "http://snomed.info/" for condition data from Lighthouse FHIR, instead of "Missing". See comments in MCP-2440.

* Add filtering "Missing".

---------

Co-authored-by: Afsin Ustundag <afsin@amida-tech.com>